--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Shashidhar Gurumurthy @ Intelliswift",
   "license": "MIT",
   "dependencies": {
+    "light-server": "^2.9.1",
     "lite-server": "^2.6.1"
   }
 }
